Tested on 
Motorola Vip : 1960, 1910, 1903, 1963.

VDR 1.7.29+

0.25	Get recordings from Streamdev, Restfapi or SmartTVweb but still only play works with SmartTVweb plugin


0.24	vip.getmarks used for selecting getmarks 0 = restfulapi, 1 = SmartTVWeb (not all users have the newest SmartTVWeb)
	Channels update.
	Selectable gettimer source. (de)activate/del/add timers only with SmartTVWeb
	Update EPG Filter
	EPGList/ Recordinglist bug fixed (hopefully)
	New key from old KPN remote added, key hh for swap prev / current channel
	Add script to generate channels.js (svdrpsend.pl needed)
	Erased channelsX.js
	Subs prio can be set eq TV5 sends multiple subs. default "DUT, ENG"
	Subtitle language can dynamic be chosen from settings menu (<menu> <1> <red>) if there is no subtitle present it resets to default.
	Added Group 10 (channels >10000) for favorite
	New option, Menu - 0 switch to favorites list (same as @ key)
	New key from old KPN remote added, key @ (paperclip) switch to favorites list
	New key from old KPN remote added, key >@ add to favorites list
	split the info menu into box info (menu yellow) & info about settings (menu 1 - yellow)
	Updated channels script, now adds timestamp to list which is shown in info menu.
	EPG Mode can be set (Now/Next only or Full EPG from stream)
	Client for MPD (http://www.musicpd.org/) turned off by default (settings.js) 
	Some times after fast zapping you get an connection error. Next play after zap within 5 s has 500 ms delay.
	support for reccmds.conf (max 9 options can be used) and must be enabled in smarttvweb plugin
		in recordings menu key_1 selects reccmds.conf option 1 (In my case move to other HDD script)



0.23	Infobox for connection Error, not only ERRR on display but also the Infobox
	Updated EPG filter for Sat.1/Pro7, Rai (13E), TVP (19E) Polish (13E)
	channels update.
	Dynamic audio selection only if number of audio channels > 1 and not "NAR" (uk mostly)
	<blue> key - EPG info always start at Now.